fix problems reported by FindBugs